package main.java.com.alura.app;

public interface ConversorUI {
    void iniciar();
}
