package main.java.com.alura.app;


public class Main {
    public static void main(String[] args) {
        ConversorUI ui = new ConsolaUI();
        ui.iniciar();
    }
}
